Content overlap. Please fix #404

--- a/resources/assets/less/users.less
+++ b/resources/assets/less/users.less
@@ -26,6 +26,9 @@
     &:hover {
         color: #fff;
     }
+    &>div{
+        word-wrap: break-word;
+    }
 }
 .search_name,
 .search_edit {
